# mulle-sde-developer

./: .gitignore  .travis.yml  CMakeLists.txt  CMakePackage.cmake  Dockerfile  ELECTRON-EXTENSIONS.md  README.md  RELEASENOTES.md  install.sh  installer  mulle-cmake-graphviz-include  mulle-create-build-motd  mulle-sde-cmake-source-update  mulle-sde-cmake-sourcetree-update
.github/workflows/: homebrew-ci.yml  mulle-sde-ci.yml  semgrep.yml
.mulle/etc/project/: version-info.sh
cola/: description.md.bud  executables.md.bud  install.md.bud  properties.plist  usage.md.bud
dox/: Makefile  mulle-sde-update-fs.dot  mulle-sde-update.dot
mulle-project/: formula-info.sh  version-info.sh
src/extensions/cmake/libexec/: cmake-source-update-and-craft-task.sh  cmake-source-update-task.sh
src/extensions/mulle-sde/cmake/: usage
src/extensions/mulle-sde/cmake/libexec/: cmake-sourcetree-update-task.sh
src/extensions/mulle-sde/cmake/project/executable/: CMakeDependenciesAndLibraries.cmake  CMakeHeadersAndSources.cmake  CMakeLists.txt
src/extensions/mulle-sde/cmake/share/cmake/: Environment.cmake  Motd.cmake
src/extensions/mulle-sde/cmake/share/match.d/: 95-cmakefile--all
src/mulle-sde/buildinfo/: init  usage
src/mulle-sde/c/: environment  environment-none  inherit  optionaltool  optionaltool.darwin  optionaltool.freebsd  optionaltool.mingw  tool  tool.darwin  tool.dragonfly  tool.freebsd  tool.linux  tool.sunos  tool.windows  usage
src/mulle-sde/c-cmake/: inherit
src/mulle-sde/c-cmake/project/all/cmake/: Headers.cmake  HeadersAndSources.cmake  Sources.cmake
src/mulle-sde/c-demo/demo/executable/PROJECT_SOURCE_DIR/: main.PROJECT_EXTENSION
src/mulle-sde/c-demo/demo/framework/PROJECT_SOURCE_DIR/: PROJECT_NAME.PROJECT_EXTENSION  PROJECT_NAME.h
src/mulle-sde/c-developer/: inherit  usage
src/mulle-sde/c/demo.append/all/: AGENTS.md
src/mulle-sde/c/demo/executable/PROJECT_SOURCE_DIR/: main.PROJECT_EXTENSION
src/mulle-sde/c/demo/executable/src/: main.DIALECT_EXTENSION
src/mulle-sde/c/project-oneshot/all/PROJECT_SOURCE_DIR/: include-private.h  include.h
src/mulle-sde/c/project-oneshot/executable/PROJECT_SOURCE_DIR/: include.h
src/mulle-sde/c/project/all/PROJECT_SOURCE_DIR/: dependencies.h  include-private.h  include.h
src/mulle-sde/c/project/executable/PROJECT_SOURCE_DIR/: include.h
src/mulle-sde/c/project/executable/src/: PROJECT_NAME-dependencies.h  dependencies.h
src/mulle-sde/cmake/: environment  environment-none  inherit  optionaltool  tool  tool.windows  usage
src/mulle-sde/cmake/demo.append/all/: AGENTS.md
src/mulle-sde/cmake/project-oneshot/all/: CMakeLists.txt
src/mulle-sde/cmake/project-oneshot/bundle/: CMakeLists.txt
src/mulle-sde/cmake/project-oneshot/executable/: CMakeLists.txt
src/mulle-sde/cmake/project-oneshot/framework/: CMakeLists.txt
src/mulle-sde/cmake/project/all/: CMakeLists.txt
src/mulle-sde/cmake/project/all/cmake/: HeadersAndSources.cmake  README.md
src/mulle-sde/cmake/project/bundle/: CMakeLists.txt
src/mulle-sde/cmake/project/executable/: CMakeLists.txt
src/mulle-sde/cmake/project/executable/cmake/: CMakeDependenciesAndLibraries.cmake  DependenciesAndLibraries.cmake  HeadersAndSources.cmake
src/mulle-sde/cmake/project/framework/: CMakeLists.txt
src/mulle-sde/cmake/share/cmake/: Motd.cmake
src/mulle-sde/cmake/share/libexec/: cmake-source-update-task.sh  cmake-sourcetree-update-task.sh
src/mulle-sde/cmake/share/monitor/libexec/: filesystem-task.sh  source-task.sh  sourcetree-task.sh
src/mulle-sde/codacy/: usage
src/mulle-sde/codacy/project/all/: .codacy.yaml
src/mulle-sde/electron/: tool  usage
src/mulle-sde/electron-developer/: inherit  usage
src/mulle-sde/electron/clobber/all/: package.json
src/mulle-sde/electron/demo/all/: cli.js  index.html  main.js  preload.js  renderer.js  styles.css
src/mulle-sde/extension/: init  usage  usage.sublime-workspace
src/mulle-sde/extension-cmake/: environment  inherit
src/mulle-sde/extension-cmake/project/all/: CMakeLists.txt  CMakePackage.cmake  LICENSE  README.md
src/mulle-sde/extension-cmake/project/extension/: CMakeLists.txt  README.md
src/mulle-sde/extension-developer/: inherit  usage
src/mulle-sde/git/: usage
src/mulle-sde/idea/: tool
src/mulle-sde/js/: environment  tool  usage
src/mulle-sde/js-developer/: inherit  usage
src/mulle-sde/makefile/: tool
src/mulle-sde/makefile-developer/: inherit  usage
src/mulle-sde/makefile/project/executable/: Makefile
src/mulle-sde/mulle-c-styleguide/: usage
src/mulle-sde/mulle-c-styleguide/share/howto/: c-styleguide.md
src/mulle-sde/npm/: usage
src/mulle-sde/npm/demo/all/: README.md  index.js
src/mulle-sde/npm/project/all/: package.json
src/mulle-sde/opencode/: usage
src/mulle-sde/opencode/project-oneshot/all/: AGENTS.md  opencode.json
src/mulle-sde/sde/: environment  init  init-subproject  optionaltool  optionaltool.darwin  post-environment  tool  type  usage
src/mulle-sde/sde/demo.append/all/: AGENTS.md
src/mulle-sde/sde/demo.append/executable/: AGENTS.md
src/mulle-sde/sde/demo/all/: README.md
src/mulle-sde/sde/demo/none/: .inherit
src/mulle-sde/sde/project/all/: .ackrc
src/mulle-sde/sde/share/howto/: debug.md  multi-project.md  testing.md
src/mulle-sde/sublime-text/: tool  usage
src/mulle-sde/sublime-text/project/all/: PROJECT_NAME.sublime-project
src/mulle-sde/travis/: usage
src/mulle-sde/vs-code-clang/: inherit
src/mulle-sde/vscode/: usage
src/mulle-sde/vscode-clang/: inherit  usage
src/mulle-sde/vscode/project/all/: PROJECT_NAME.code-workspace
test/: README.md  run-test
test/01-install/: run-test
test/01-install-executable/: run-test
test/01-install-framework/: run-test
test/01-install-library/: run-test
test/02-threephase/: run-test
test/03-subproject-share-symlink/: run-test
test/04-linkorder/: run-test
test/10-autoconf/: README.md  run-test
test/10-autoconf/repos/executable/: Makefile.am  configure.ac  executable.c
test/20-github/: run-test
test/50-cc/: run-test
test/60-electron/: README.md  run-test
(+84 files in other folders)
